# cmaker

./: .gitignore  README.md  pyproject.toml
campaigns/campaign_1/: brief.yaml
docs/: Presentation.key
examples/campaign_2/: brief.yaml
examples/campaign_3/: brief.yaml
examples/campaign_4/: brief.yaml
examples/campaign_empty/: brief.yaml
src/cmaker/: __init__.py  campaign_loading.py  campaign_processing.py  config.py  image_generation.py  image_processing.py  logger.py  main.py  prompt_generation.py
